US58150: Remote feed cropping fix

--- a/docroot/react/src/views/secure/visit/conference/conference.less
+++ b/docroot/react/src/views/secure/visit/conference/conference.less
@@ -258,7 +258,7 @@
                 bottom: 52px;
                 right: 0;
                 max-height: 25%;
-                width: 18% !important;
+                width: 17.5% !important;
              }
 
              .top{
@@ -493,9 +493,56 @@
     }
 }
 
+@media only screen and (max-width: 414px) and (orientation: portrait) {
+    .conference-page {
+        .video-conference-container {
+            .video-conference {
+                .flipRemoteFeedPIP{
+                    object-fit: cover;
+                    z-index: 3;
+                    position: fixed;
+                    bottom: 52px;
+                    right: 0;
+                    max-height: 25%;
+                    width: 24.5% !important;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 375px) and (orientation: portrait) {
+    .conference-page {
+        .video-conference-container {
+            .video-conference {
+                .flipRemoteFeedPIP{
+                    object-fit: cover;
+                    z-index: 3;
+                    position: fixed;
+                    bottom: 52px;
+                    right: 0;
+                    max-height: 25%;
+                    width: 29% !important;
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 325px) and (orientation: portrait) {
     .conference-page {
         .video-conference-container {
+            .video-conference {
+                .flipRemoteFeedPIP{
+                    object-fit: cover;
+                    z-index: 3;
+                    position: fixed;
+                    bottom: 52px;
+                    right: 0;
+                    max-height: 25%;
+                    width: 29% !important;
+                }
+            }
 
             .stream-containerPIP{
                 width:100%;
